Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* pkgcore now properly preserves ordering when parsing profile files, so a
  package.use.mask with:
  """dev-util/foo X
  =dev-util/foo-1 -X"""
  properly results in X disabled, except for v1.

* add EAPI limitation to all portageq invocations, and support USE dep
  usage with has_version and friends.

* handle portage's new interpretation of the sync retries variable for portage
  configuration.

* pinspect distfiles_usage was added; this is primarily useful for getting
  a repository level view of what the distfiles requirements are, what takes
  what percentile of unique space, etc.

* FEATURES=allow-missing-manifests ; does exactly as it sounds, not advised to
  use unless you know what you're doing.

* ospkg's fork of pkgcore has been folded in; FEATURES=save-deb is the primary
  addition.

* extended atom syntax now allows '*' to be used w/in a string- for example
  dev-*kde, *dev-*k*de*, etc.  This syntax is usable in user configs, and
  from the commandline.

* new FEATURES=fixlafiles is on by default; basically folds
  dev-util/lafilefixer functionality directly into the merger.
  Note this version drops comments- it's about a 66% reduction in .la system
  filespace requirements via doing so.

* triggers base class now carries a ConfigHint to provide a typename.  If
  a specific trigger cannot be specified by configuration directly, set
  pkgcore_config_type = None to disable the hint removing it from being
  directly configurable.

  For users: this means basically all triggers are now directly usable in
  configuration.

* object inspection for configuration can now handle object.__init__ for
  config 'class' targets; no need to define an intermediate function.

* ConfigHints can now specify authorative=True to disable all introspection.
  Mainly usedful for cpy objects, although useful if you want to limit what