@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* fixed traceback during displaying a summary for 'pinspect eapi_usage'
+
 * pkgcore now properly preserves ordering when parsing profile files, so a
   package.use.mask with:
   """dev-util/foo X
